--- a/00-microtestes/01-javascript/exemplo1.html
+++ b/00-microtestes/01-javascript/exemplo1.html
@@ -32,46 +32,6 @@
 		mudarVisibilidade("ok", "none");
 		mudarVisibilidade("error", "none");
 
-		// função que faz chamada http get
-		function httpGet(endereco) {
-			var req = new XMLHttpRequest(); // objeto que faz chamada http
-			// definir função executada quando a propriedade readyState mudar
-			req.onreadystatechange = function () {
-				// se a requisição foi concluída, a resposta está pronta e a requisição deu certo
-				if (this.readyState == 4 && this.status == 200) {
-					// se a resposta não for indefinida
-					if (typeof this.responseText !== 'undefined') {
-						// converte a resposta para json
-						var myArr = JSON.parse(this.responseText);
-						// altera as figuras de acordo com a resposta
-						informaResultado(myArr);
-					}
-				}
-			};
-			//req.onload = informaResultado();
-			// define os parâmetros da chamada http get! (true define chamada assíncrona)
-			req.open("GET", endereco, true); // true for synchronous request
-			// envia a requisição
-			req.send();
-		}
-
-		// função para manipular imagens
-		function informaResultado(conteudo) {
-			try {
-				// se o resultado da requisição deu certo
-				if (conteudo['message'] === 'ok') {
-					// mostra a figura de ok
-					mudarVisibilidade("ok", "block");
-				} else {
-					// mostra a figura de erro
-					mudarVisibilidade("error", "block");
-				}
-				// oculta ícone de progresso
-				mudarVisibilidade("espera", "none");
-			}
-			catch (e) { } // não trata erros de conteúdo inválido
-		}
-
 		// função que altera visibilidade de um elemento
 		function mudarVisibilidade(elemento, visibilidade) {
 			// encontra o elemento
@@ -102,6 +62,46 @@
 				var res = httpGet(site);
 			}
 		}
+
+		// função que faz chamada http get
+		function httpGet(endereco) {
+			var req = new XMLHttpRequest(); // objeto que faz chamada http
+			// definir função executada quando a propriedade readyState mudar
+			req.onreadystatechange = function () {
+				// se a requisição foi concluída, a resposta está pronta e a requisição deu certo
+				if (this.readyState == 4 && this.status == 200) {
+					// se a resposta não for indefinida
+					if (typeof this.responseText !== 'undefined') {
+						// converte a resposta para json
+						var myArr = JSON.parse(this.responseText);
+						// altera as figuras de acordo com a resposta
+						informaResultado(myArr);
+					}
+				}
+			};
+			// define os parâmetros da chamada http get! (true define chamada assíncrona)
+			req.open("GET", endereco, true); 
+			// envia a requisição
+			req.send();
+		}
+
+		// função para manipular imagens
+		function informaResultado(conteudo) {
+			try {
+				// se o resultado da requisição deu certo
+				if (conteudo['message'] === 'ok') {
+					// mostra a figura de ok
+					mudarVisibilidade("ok", "block");
+				} else {
+					// mostra a figura de erro
+					mudarVisibilidade("error", "block");
+				}
+				// oculta ícone de progresso
+				mudarVisibilidade("espera", "none");
+			}
+			catch (e) { } // não trata erros de conteúdo inválido
+		}
+
 	</script>
 
 </body>
