ajustes no javascript para executar post e get de forma parametrizada

--- a/00-microtestes/02-javascript/exemplo1.html
+++ b/00-microtestes/02-javascript/exemplo1.html
@@ -9,7 +9,8 @@
 	Login: <input type=text id=login name=login> <br>
 
 	<!-- quando o cursor sair do campo senha, consulta-se a validade do login/senha -->
-	Senha: <input type=text id=senha name=senha onfocusout="analisarSenha()"> <br>
+	Senha: <input type=text id=senha 
+	name=senha onfocusout="analisarSenha()"> <br>
 
 	<!-- área de imagens de controle de verificação de login/senha -->
 	<div id="espera"><img src=waiting2.gif width="24"></div>
