--- a/09-integracao/05-pessoas-front-e-back-com-javascript/05-pessoas-front-e-back-com-javascript-python/cliente.html
+++ b/09-integracao/05-pessoas-front-e-back-com-javascript/05-pessoas-front-e-back-com-javascript-python/cliente.html
@@ -4,29 +4,7 @@
 <head>
     <title>Listagem de Pessoas</title>
 
-    <!-- https://stackoverflow.com/questions/37914180/vm6031-uncaught-syntaxerror-unexpected-token-o-in-json-at-position-1 -->
-    <script src="jquery-3.4.1.min.js"></script>
-    <script>
-        $.ajax({
-            url: 'http://localhost:4999/listar_pessoas',
-            //contentType: 'application/json',
-            cache: false,
-            method: 'GET',
-            //dataType: 'json',
-            dataType: 'html',
-            success: function (resultado) {
-                alert(resultado);
-                //pessoas = JSON.parse(resultado) 
-                pessoas = $.parseJSON(resultado);
-                ps = pessoas['lista'];
-                for (var i in ps) {
-                    alert(ps[i]['nome']);
-                }
-                // adicione o nome da pessoa na div apropriada
-                //    $('#div_pessoas').append(pessoa["nome"]+"<br>");
-                //}
-            }
-        });</script>
+  
 </head>
 
 <body>
@@ -34,8 +12,33 @@
 
     teste
 
-    </script>
+   
 
 </body>
 
+  <!-- https://stackoverflow.com/questions/37914180/vm6031-uncaught-syntaxerror-unexpected-token-o-in-json-at-position-1 -->
+  <script src="js/jquery-3.4.1.min.js"></script>
+  <script>
+      $.ajax({
+          url: 'http://localhost:4999/listar_pessoas',
+          //contentType: 'application/json',
+          cache: false,
+          method: 'GET',
+          //dataType: 'json',
+          dataType: 'html',
+          success: function (resultado) {
+              alert(resultado);
+              //pessoas = JSON.parse(resultado) 
+              pessoas = $.parseJSON(resultado);
+              ps = pessoas['lista'];
+              for (var i in ps) {
+                  alert(ps[i]['nome']);
+              }
+              // adicione o nome da pessoa na div apropriada
+              //    $('#div_pessoas').append(pessoa["nome"]+"<br>");
+              //}
+          }
+      });
+      </script>
+      
 </html>
