ajustes no frontend jquery

--- a/09-integracao/05-pessoas-front-e-back-com-javascript/05-pessoas-front-e-back-com-javascript-python/cliente.html
+++ b/09-integracao/05-pessoas-front-e-back-com-javascript/05-pessoas-front-e-back-com-javascript-python/cliente.html
@@ -15,46 +15,7 @@
     </div>
 </body>
 
-<!-- https://stackoverflow.com/questions/37914180/vm6031-uncaught-syntaxerror-unexpected-token-o-in-json-at-position-1 -->
 <script src="js/jquery-3.4.1.min.js"></script>
-<script>
-
-    $("#ler_json").click(function () {
-        $.ajax({
-            url: 'http://localhost:4999/listar_pessoas',
-            method: 'GET',
-            dataType: 'json',
-            success: function (resultado) {
-                alert(resultado);
-                pessoas = resultado.lista;
-                for (var i in pessoas) { //i vale a posição no vetor
-                    $('#pessoas').append(pessoas[i].nome + "<br>");
-                }
-            },
-            error: function (resultado) {
-                alert("ocorreu algum erro na leitura dos dados: ", res);
-            }
-        });
-    });
-
-    $("#ler_html").click(function () {
-        $.ajax({
-            url: 'http://localhost:4999/listar_pessoas',
-            method: 'GET',
-            dataType: 'text',
-            success: function (resultado) {
-                alert(resultado);
-                dados_json = $.parseJSON(resultado); // converter para json
-                pessoas = dados_json['lista'];
-                for (var i in pessoas) { // i vale a posição no vetor
-                    $('#pessoas').append(pessoas[i]['nome']+"<br>");
-                 }
-            },
-            error: function (resultado) {
-                alert("ocorreu algum erro na leitura dos dados: ", res);
-            }
-        });
-    });
-</script>
+<script src="js/meuscript.js"></script>
 
 </html>
