basico js+python

--- a/00-microtestes/05-jquery/07-front-js-e-back-py/cliente.html
+++ b/00-microtestes/05-jquery/07-front-js-e-back-py/cliente.html
@@ -3,10 +3,11 @@
 
 <head>
     <title>Listagem de Pessoas</title>
+    <link rel="stylesheet" type="text/css" href="css/estilos.css">
 </head>
 
 <body>
-    <h1>Pessoas</h1>
+    <h1>Cadastro de Pessoas</h1>
     <button id=ler_json>Ler no modo Json</button>
     <button id=ler_html>Ler no modo html</button>
     <hr>
