--- a/09-integracao/05-pessoas-front-e-back-com-javascript/05-pessoas-front-e-back-com-javascript-python/index.html
+++ b/09-integracao/05-pessoas-front-e-back-com-javascript/05-pessoas-front-e-back-com-javascript-python/index.html
@@ -4,12 +4,15 @@
 <head>
     <title>Listagem de Pessoas</title>
     <link rel="stylesheet" type="text/css" href="css/estilos.css">
+    <link rel="stylesheet" type="text/css" id=estilo_tabela href="css/tabela1.css">
 </head>
 
 <body>
     <h1>Cadastro de Pessoas</h1>
     <button id="btn_listar_pessoas">Listar</button>
     <button id="btn_form_incluir_pessoa">Incluir</button>
+    <button id="tabela1" class="muda_estilo">estilo 1</button>
+    <button id="tabela3" class="muda_estilo">estilo 3</button>
     <hr>
 
     <!-- form de inclusão a seguir: inicialmente oculto-->
